objects/iahelp__HelpedPageLayout__c.object
<CustomObject>
    <description>A Salesforce page that has been enabled with Improved Help</description>
    <fields>
        <fullName>iahelp__AllowComments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Un-check this box to prevent users from logging comments about this Layout</description>
        <inlineHelpText>Un-check this box to prevent users from logging comments about this Layout</inlineHelpText>
        <label>Allow Comments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>iahelp__PageLayoutIdentifier__c</fullName>
        <description>For Object-based Helped Page Layouts, the three letter unique identifier for the SalesForce object that &apos;owns&apos; this Page Layout</description>
        <inlineHelpText>For Object-based Helped Page Layouts, the three letter unique identifier for the SalesForce object that &apos;owns&apos; this Page Layout</inlineHelpText>
        <label>Page Layout Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__PageType__c</fullName>
        <description>The technology used to develop and deliver this Helped Page Layout</description>
        <inlineHelpText>The technology used to develop and deliver this Helped Page Layout</inlineHelpText>
        <label>Page Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Visual Force</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>iahelp__RehookInterval__c</fullName>
        <defaultValue>1500</defaultValue>
        <description>Where re-hooking is required, the interval in milliseconds between hooking attempts.</description>
        <inlineHelpText>Where re-hooking is required, the interval in milliseconds between hooking attempts.</inlineHelpText>
        <label>Re-hook Interval</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iahelp__RehookTimes__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For very complex layouts, the number of times to attempt re-hooking. 0 = do not rehook. -1 = re-hook continually.</description>
        <inlineHelpText>For very complex layouts, the number of times to attempt re-hooking. 0 = do not rehook. -1 = re-hook continually.</inlineHelpText>
        <label>Re-hook Times</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Helped Page Layout</label>
    <listViews>
        <fullName>iahelp__AllHelpedPageLayouts</fullName>
        <columns>NAME</columns>
        <columns>iahelp__PageLayoutIdentifier__c</columns>
        <columns>iahelp__PageType__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>iahelp__AllowComments__c</columns>
        <filterScope>Everything</filterScope>
        <label>1. All Helped Page Layouts</label>
    </listViews>
    <listViews>
        <fullName>iahelp__AllMyHelpedPageLayouts</fullName>
        <columns>NAME</columns>
        <columns>iahelp__PageLayoutIdentifier__c</columns>
        <columns>iahelp__PageType__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>iahelp__AllowComments__c</columns>
        <filterScope>Mine</filterScope>
        <label>All My Helped Page Layouts</label>
    </listViews>
    <listViews>
        <fullName>iahelp__Draft_Layouts</fullName>
        <columns>NAME</columns>
        <columns>iahelp__PageType__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>iahelp__PageLayoutIdentifier__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>iahelp__AllowComments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Draft</value>
        </filters>
        <label>Draft Layouts (Newly &apos;Help-Enabled&apos;)</label>
    </listViews>
    <nameField>
        <label>Helped Page Layout Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Helped Page Layouts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>